methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:3: error: Missing closing brace `}' assumed here
def makeV() {
^PictureMono2:3: error: expected class or object definition
def makeV() {
^PictureMono2:19: error: expected class or object definition
for (i <- 1 to 3) {
^PictureMono2:27: error: Missing closing brace `}' assumed here
    right() 
    ^PictureMono2:29: error: Missing closing brace `}' assumed here
}
^