methods.picture.PictureMono2.scala.code
override def run() {
  
def makeV() {
  forward()
  brushDown()
  brushUp()
  forward()
  left()
  forward()
  brushDown()
  brushUp()
  backward()
  right()
  forward()
  brushDown()
  brushUp()
}

for (i <- 1 to 3) {
  for (j <- 1 to 3) {
  	for (k <- 1 to 5) {
      forward()
      makeV()
      forward()
      forward()
      left()
    right()